invalid_var_arg_keywords_test/invalid_var_arg_keywords_test_6.src
.IPPcode24
POPS int@5